--- a/src/components/Cards/style.css
+++ b/src/components/Cards/style.css
@@ -71,3 +71,21 @@
     margin-left: 7%;
   }
 }
+
+@media only screen and (min-width: 1050px) {
+  .main-home {
+    display: flex;
+    justify-content: space-evenly;
+  }
+  .card-container {
+    width: 560px;
+    margin: 20px auto;
+    background-position-x: 96%;
+  }
+
+  .card-span-container {
+    transform: translateX(-86%);
+    display: flex;
+    justify-content: flex-end;
+  }
+}
