--- a/src/components/Form/style.css
+++ b/src/components/Form/style.css
@@ -181,10 +181,13 @@ body {
 }
 
 @media only screen and (min-width: 1050px) {
+  .main-home {
+    display: flex;
+    justify-content: space-evenly;
+  }
   .form-style {
-    width: 40%;
+    width: 100%;
     height: 351px;
-    margin: 0;
     border-radius: 4px;
     background-color: var(--Color-4);
     box-shadow: 0px 4px 32px -12px rgba(0, 0, 0, 0.25);
