--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -15,7 +15,7 @@ body {
 
 .header-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   height: 88px;
 }
@@ -47,16 +47,36 @@ body {
   }
 
   .figure-style {
-    margin-left: -5em;
-    margin-right: 0;
+    margin-right: 35%;
   }
 }
 
 @media only screen and (min-width: 1050px) {
+  .main-home {
+    display: flex;
+    justify-content: space-evenly;
+  }
+
   .header-style {
     display: flex;
     box-shadow: 0px 4px 32px -12px rgb(0 0 0 / 25%);
     border: 1px;
     width: 100%;
+  }
+
+  .header-container {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+  }
+
+  .figure-style {
+    margin-right: 80vh;
+    margin-left: 0;
+  }
+  .img-KenzieLogo {
+    height: 19.53px;
+    width: 122.68px;
+    margin-left: 0;
   }
 }
