--- a/src/components/Intropg/style.css
+++ b/src/components/Intropg/style.css
@@ -58,5 +58,102 @@
   border-radius: 8px;
   color: white;
   width: 150px;
-  height: 30px;
+  height: 40px;
+  font-size: 15px;
+  font-weight: 600;
+}
+
+@media only screen and (min-width: 750px) {
+  .intro-style {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    background-color: #212529;
+    height: 100vh;
+  }
+  .intro-title {
+    font-family: "Nunito", sans-serif;
+    color: white;
+    font-size: 28px;
+    display: flex;
+    text-align: center;
+    width: 90%;
+    margin: 20px 20px 10px;
+    justify-content: center;
+  }
+  .intro-span {
+    display: flex;
+    color: white;
+    justify-content: center;
+    font-size: 20px;
+    padding-bottom: 10px;
+  }
+  .intro-figure-style2 {
+    height: 65%;
+    display: flex;
+    /* width: 75%; */
+    justify-content: center;
+  }
+  .link-style {
+    top: 580px;
+    left: 305px;
+    position: absolute;
+    margin: 0 auto;
+  }
+  .img-logo {
+    /* width: 400px; */
+    height: 85%;
+    display: flex;
+    justify-content: center;
+  }
+}
+
+@media only screen and (min-width: 1050px) {
+  .intro-title {
+    font-family: "Nunito", sans-serif;
+    color: white;
+    font-size: 40px;
+    display: flex;
+    text-align: center;
+    width: 90%;
+    margin: 20px 20px 10px;
+    justify-content: center;
+  }
+
+  .intro-span {
+    display: flex;
+    color: white;
+    justify-content: center;
+    font-size: 25px;
+    padding-bottom: 10px;
+  }
+  .img-logo {
+    width: 55%;
+    height: 70%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .link-style {
+    top: 580px;
+    left: 440px;
+    position: absolute;
+    margin: 0 auto;
+  }
+  .intro-figure-style2 {
+    height: 85%;
+    display: flex;
+    /* width: 75%; */
+    justify-content: center;
+  }
+  .intro-btn {
+    background-color: #fd377e;
+    border: 2px solid #fd377e;
+    border-radius: 8px;
+    color: white;
+    width: 180px;
+    height: 40px;
+    font-size: 15px;
+    font-weight: 600;
+  }
 }
