--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -38,7 +38,7 @@ body {
   border: 1.4px solid var(--Color-2);
   color: var(--Color-3);
   position: absolute;
-  top: 3%;
+  top: 3vh;
   left: 70%;
 }
 
@@ -64,7 +64,7 @@ body {
     border: 1.4px solid var(--Color-2);
     color: var(--Color-3);
     position: absolute;
-    top: 3%;
+    top: 3vh;
     left: 80%;
   }
 }
@@ -105,7 +105,7 @@ body {
     border: 1.4px solid var(--Color-2);
     color: var(--Color-3);
     position: absolute;
-    top: 3%;
+    top: 3vh;
     left: 90%;
   }
 }
