--- a/src/components/List/style.css
+++ b/src/components/List/style.css
@@ -110,6 +110,7 @@
     height: 40px;
     width: 69px;
     margin-right: 10px;
+    cursor: pointer;
   }
 
   .bt1 {
@@ -123,5 +124,17 @@
     width: 560px;
     margin-bottom: 10px;
     justify-content: space-between;
+  }
+
+  .vazio {
+    margin-top: 45px;
+    width: 562px;
+    height: 87px;
+    background-color: #f8f9fa;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    border-left: 4px #e9ecef solid;
+    border-radius: 4px;
   }
 }
