--- a/src/components/Form/style.css
+++ b/src/components/Form/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter&family=Poppins:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Poppins:wght@400;700&display=swap');
 
 body {
   font-family: var(--Fonts-Inter);
@@ -14,11 +14,11 @@ body {
   --Color-4: #ffff;
   --Color-5: #fd377e;
   /* FONT */
-  --Fonts-Inter: "Inter", sans-serif;
+  --Fonts-Inter: 'Inter', sans-serif;
 }
 
 .form-style {
-  width: 95%;
+  width: 100%;
   margin: 10px auto 10px;
   height: 351px;
   border-radius: 4px;
@@ -27,7 +27,6 @@ body {
 }
 
 .description-section {
-  padding-top: 38px;
   display: flex;
   flex-direction: column;
 }
@@ -40,6 +39,7 @@ body {
   display: flex;
   justify-content: flex-start;
   margin-left: 13%;
+  margin-top: 30px;
 }
 
 .description-span-ex-style {
@@ -179,11 +179,7 @@ body {
   }
 }
 
-@media only screen and (min-width: 1050px) {
-  .main-home {
-    display: flex;
-    justify-content: space-evenly;
-  }
+@media only screen and (min-width: 750px) {
   .form-style {
     width: 100%;
     height: 351px;
