--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -11,23 +11,22 @@ body {
 .header-style {
   box-shadow: 0px 4px 32px -12px rgba(0, 0, 0, 0.25);
   border: 1px;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.header-container {
+.header-style-wrapper {
   display: flex;
   justify-content: space-between;
+  width: 330px;
   align-items: center;
-  height: 88px;
-}
-
-.figure-style {
-  margin-right: 40%;
 }
 
 .img-KenzieLogo {
   height: 19.53px;
   width: 122.68px;
-  margin-left: 20px;
 }
 
 .btn-header {
@@ -36,62 +35,36 @@ body {
   border-radius: 8px;
   background-color: var(--Color-2);
   border: 1.4px solid var(--Color-2);
-  color: var(--Color-3);
-  position: absolute;
-  top: 3vh;
-  left: 70%;
-}
-
-.container-pg {
-  position: relative;
+  color: #343a40;
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 19px;
 }
 
 @media only screen and (min-width: 750px) {
-  .header-container {
-    display: flex;
-    justify-content: space-around;
-  }
-
-  .figure-style {
-    margin-right: 65%;
-  }
-
-  .btn-header {
-    height: 40px;
-    width: 64px;
-    border-radius: 8px;
-    background-color: var(--Color-2);
-    border: 1.4px solid var(--Color-2);
-    color: var(--Color-3);
-    position: absolute;
-    top: 3vh;
-    left: 80%;
-  }
-}
-
-@media only screen and (min-width: 1050px) {
-  .main-home {
-    display: flex;
-    justify-content: space-evenly;
+  .container-pg {
+    height: 100vh;
   }
 
   .header-style {
     display: flex;
+    height: 88px;
+    width: 100%;
     box-shadow: 0px 4px 32px -12px rgb(0 0 0 / 25%);
     border: 1px;
-    width: 100%;
+    align-items: center;
+    justify-content: center;
   }
 
   .header-container {
     display: flex;
     justify-content: space-evenly;
-    width: 100%;
+    height: 88px;
+    align-items: center;
   }
 
-  .figure-style {
-    margin-right: 80%;
-    margin-left: 0;
-  }
   .img-KenzieLogo {
     height: 19.53px;
     width: 122.68px;
@@ -103,9 +76,22 @@ body {
     border-radius: 8px;
     background-color: var(--Color-2);
     border: 1.4px solid var(--Color-2);
-    color: var(--Color-3);
-    position: absolute;
-    top: 3vh;
-    left: 90%;
+    color: #343a40;
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 19px;
+  }
+
+  .header-style-wrapper {
+    width: 975px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .btn {
+    display: flex;
   }
 }
